--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
     </span>
     <footer>
-        <a>Todos los derechos reservados</a>
+        <p>Todos los derechos reservados</p>
     </footer>
 </body>
 </html>
