--- a/Estudios.html
+++ b/Estudios.html
@@ -9,26 +9,23 @@
 </head>
 <body>
     <header class="headertipo1">
-            <nav>
-                <ul class="botontipo1">
-                    <li class="litipo1"><a href="index.html">Página principal</a></li>
-                    <li class="litipo1"><a href="Estudios.html">Estudios</a></li>
-                    <li class="litipo1"><a href="Competencias.html">Competencias</a></li>
-                    <li class="litipo1"><a href="Experiencia.html">Experiencia laboral</a></li>
-                </ul>
-            </nav>
+        <ul class="ultipo1">
+            <li class="litipo1"><a href="index.html">Página principal</a></li>
+            <li class="litipo1"><a href="Estudios.html">Estudios</a></li>
+            <li class="litipo1"><a href="Competencias.html">Competencias</a></li>
+            <li class="litipo1"><a href="Experiencia.html">Experiencia laboral</a></li>
+        </ul>
     </header>
     <h1>Curriculum vitae de Emanuel Rosas</h1>
-    <h2>Mis estudios</h2>
+    <h2>Mis Estudios</h2>
     <span class="spantipo1">
-            <img class="Emanuel-Rosas" src="emanuelimg.jpg" alt="Imagen de Emanuel Rosas" height="500" width="400">
-            <div class="divtipo1">
-                <p>Primaria y Secundaria: Completa realizada en Insituto Austal de Enseñanza (Chubut)</p>
-                <p>Estudios Universarios: Actualmente cursando Lic. en gestión de Tecnología de la Información en UADE</p>
-            </div>
+        <img class="Emanuel-Rosas" src="emanuelimg.jpg" alt="Imagen de Emanuel Rosas" height="500" width="400">
+        <div class="divtipo1">
+            <p>Primaria y Secundaria: Completa realizada en Insituto Austal de Enseñanza (Chubut)</p>
+            <p>Estudios Universarios: Actualmente cursando Lic. en gestión de Tecnología de la Información en UADE</p>
+        </div>
     </span>
     <footer>
-        <a>Todos los derechos reservados</a>
+        <p>Todos los derechos reservados</p>
     </footer>
 </body>
-</html>
