--- a/index.html
+++ b/index.html
@@ -9,28 +9,26 @@
 </head>
 <body>
     <header class="headertipo1">
-            <nav>
-                <ul class="botontipo1">
-                    <li class="litipo1"><a href="index.html">Página principal</a></li>
-                    <li class="litipo1"><a href="Estudios.html">Estudios</a></li>
-                    <li class="litipo1"><a href="Competencias.html">Competencias</a></li>
-                    <li class="litipo1"><a href="Experiencia.html">Experiencia laboral</a></li>
-                </ul>
-            </nav>
+        <ul class="ultipo1">
+            <li class="litipo1"><a href="index.html">Página principal</a></li>
+            <li class="litipo1"><a href="Estudios.html">Estudios</a></li>
+            <li class="litipo1"><a href="Competencias.html">Competencias</a></li>
+            <li class="litipo1"><a href="Experiencia.html">Experiencia laboral</a></li>
+        </ul>
     </header>
     <h1>Curriculum vitae de Emanuel Rosas</h1>
     <h2>Les doy la bienvenida a mi Curriculum Vitae</h2>
     <span class="spantipo1">
-            <img class="Emanuel-Rosas" src="emanuelimg.jpg" alt="Imagen de Emanuel Rosas" height="500" width="400">
-            <div class="divtipo1">
-                <p>Nombre: Emanuel</p>
-                <p>Apellido: Rosas</p>
-                <p>Edad: 19 años</p>
-                <p>Fecha de nacimiento: 28/07/2003</p>
-            </div>
+        <img class="Emanuel-Rosas" src="emanuelimg.jpg" alt="Imagen de Emanuel Rosas" height="500" width="400">
+        <div class="divtipo1">
+            <p>Nombre: Emanuel</p>
+            <p>Apellido: Rosas</p>
+            <p>Edad: 19 años</p>
+            <p>Fecha de nacimiento: 28/07/2003</p>
+            <a class="noclass" href="https://www.figma.com/file/suoApqpagIk5ziwRFMqveQ/CV-UADE?node-id=0-1&t=bHtjAs9YlcoDmKiv-0">Sitio de Figma</a>
+        </div>
     </span>
     <footer>
         <p>Todos los derechos reservados</p>
     </footer>
 </body>
-</html>
