--- a/Experiencia.html
+++ b/Experiencia.html
@@ -9,25 +9,22 @@
 </head>
 <body>
     <header class="headertipo1">
-            <nav>
-                <ul class="botontipo1">
-                    <li class="litipo1"><a href="index.html">Página principal</a></li>
-                    <li class="litipo1"><a href="Estudios.html">Estudios</a></li>
-                    <li class="litipo1"><a href="Competencias.html">Competencias</a></li>
-                    <li class="litipo1"><a href="Experiencia.html">Experiencia laboral</a></li>
-                </ul>
-            </nav>
+        <ul class="ultipo1">
+            <li class="litipo1"><a href="index.html">Página principal</a></li>
+            <li class="litipo1"><a href="Estudios.html">Estudios</a></li>
+            <li class="litipo1"><a href="Competencias.html">Competencias</a></li>
+            <li class="litipo1"><a href="Experiencia.html">Experiencia laboral</a></li>
+        </ul>
     </header>
     <h1>Curriculum vitae de Emanuel Rosas</h1>
-    <h2>Mis experiencias laborales</h2>
+    <h2>Mi Experiencia laboral</h2>
     <span class="spantipo1">
-            <img class="Emanuel-Rosas" src="emanuelimg.jpg" alt="Imagen de Emanuel Rosas" height="500" width="400">
-            <div class="divtipo1">
-                <p>No poseo ninguna experiencia laboral.</p>
-            </div>
+        <img class="Emanuel-Rosas" src="emanuelimg.jpg" alt="Imagen de Emanuel Rosas" height="500" width="400">
+        <div class="divtipo1">
+            <p>No poseo ninguna experiencia laboral.</p>
+        </div>
     </span>
     <footer>
-        <a>Todos los derechos reservados</a>
+        <p>Todos los derechos reservados</p>
     </footer>
 </body>
-</html>
