--- a/Competencias.html
+++ b/Competencias.html
@@ -21,7 +21,7 @@
     <span class="spantipo1">
         <img class="Emanuel-Rosas" src="emanuelimg.jpg" alt="Imagen de Emanuel Rosas" height="500" width="400">
         <div class="divtipo1">
-            <p>Competencias de Hersonalidad</p>
+            <p>Competencias de Personalidad</p>
             <li>Pensamiento critico</li>
             <li>Perfecionista</li>
             <li>Flexible</li>
